--- a/src/app/components/city-autocomplete/city-autocomplete.component.html
+++ b/src/app/components/city-autocomplete/city-autocomplete.component.html
@@ -1,3 +1,16 @@
 <form [formGroup]="form">
-  <input type="text" formControlName="zip">
+  <div class="row">
+    <div class="col-3">
+      <label for="zip">PLZ</label>
+      <input type="text" formControlName="zip" id="zip">
+    </div>
+    <div class="col-3">
+      <label for="city">Ort</label>
+      <input type="text" formControlName="city" id="city">
+    </div>
+  </div>
 </form>
+<ul>
+  <li *ngFor="let city of preview" (click)="setSelected(city)">{{city.zip + ' ' + city.city}}</li>
+</ul>
+<button (click)="clearForm()">clear</button>
